css/style.css
/* RESET */
*,
*::before,
*::after{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
}

a{
    text-decoration: none;
}

.block{
    padding: 6rem 10%;
}

html{
    font-size: 62.5%;
}

/* ROOT VARIABLE */
:root{
    --color-primary: #FF5722;
    --color-primary-light: #FF7A50;
    --color-secondary-dark: #FFA589;
    --color-navbar: #f8f8f8;
    --color-headings: #000000;
    --color-body: #333333;
    --color-nav-link: #545454;
    --color-white: #ffffff;
    --color-secondary-white: #FFF6F2;
}

/* TYPOGRAPHY */
h1,h2,h3{
    color: var(--color-headings);
    font-weight: 700;
}

h1{
    font-size: 2.5rem;
}

h2{
    font-size: 2.2rem;
    margin-bottom: 2.5rem;
}

body{
    color: var(--color-body);
    font-size: 1.4rem;
    line-height: 1.7;
}

html,body{
    overflow-x: hidden;
}

@media screen and (min-width: 1024px) {
    h1{
        font-size: 5rem;
    }
    h2{
        font-size: 3.5rem;
    }
    body{
        font-size: 1.8rem;
    }
}

.container{
    max-width: 1140px;
    margin: 0 auto;
}

/* COMPONENTS */
.btn{
    outline: none;
    border: none;
    border-radius: 8px;
    padding: 1.1rem 2.5rem;
    cursor: pointer;
    text-align: center;
    white-space: nowrap;
    margin: 1rem 0;
    font-size: 1.4rem;
}   


.btn--primary{
    background-color: var(--color-primary);
    color: var(--color-white);
}

.btn--secondary{
    background-color: var(--color-secondary-dark);
    color: var(--color-white);
}

.btn--block{
    width: 100%;
    font-size: 1.6rem;
}

@media screen and (min-width: 1024px){
    .btn{
        font-size: 1.6rem;
    }
    .btn--block{
        font-size: 2rem;
    }
}

/* BADGE */
.badge{
    display: inline-block;
    padding: 0.2rem 1.5rem;
    font-size: 1.2rem;
    border-radius: 32px;
    border: 2px solid var(--color-primary);
    text-transform: uppercase;
    font-weight: bold; 
}

.badge--primary{
    background-color: var(--color-primary);
    color: var(--color-white);
}

.badge--secondary{
    background-color: var(--color-white);
    color: var(--color-primary);
}

@media screen and (min-width: 1024px){
    .badge{
        font-size: 1.4rem;
    }
}

/* LIST */
.list{
    font-size: 1.6rem;
}

.list--inline .list__item{
    display: inline-block;
}

.list--check .list__item{
    background: url("/assets/images/check.svg") no-repeat right center;
    padding-right: 3rem;
    margin-bottom: 1.5rem;
}

@media screen and (min-width: 1024px){
    .list--check .list__item{
        font-size: 1.8rem;
        margin-bottom: 2rem;
    }
}

/* PRICE PLANS SECTION*/
.plans{
    padding: 2rem 9%;
}
.plans__list{
    display: grid;
    gap: 5rem;
    justify-items: center;
    grid-template-columns: repeat(auto-fit, minmax(311px, 1fr));
    margin: 1rem 0;
}

.plans__card{
    min-width: 310px;
    overflow: hidden;
    border-radius: 20px;
    background-color: var(--color-secondary-white);
    box-shadow: 0 0 20px 10px #f3f2f2e1;
    transition: all 0.2s ease-in-out;
}

.plans__card:hover{
    transform: scale(1.05);
}

.plan--popular{
    transform: scale(1.1);
}

.plan--popular:hover{
    transform: scale(1.15);
}

.plans__header{
    color: var(--color-white);
}

.card--primary .plans__header{
    background-color: var(--color-primary-light);
}

.card--secondary .plans__header{
    background-color: var(--color-secondary-dark);
}

.plans__header,
.plans__body{
    padding: 3rem;
}

.plans__intro-row{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 2rem;
}

.plans__desc-row{
    letter-spacing: 1.1px;
    white-space: nowrap;
}

.plans__price{
    font-size: 2rem;
}

.plans__billing-cycle{
    font-size: 1.4rem;
}

.plan__list__check .list{
    margin-bottom: 5rem;
}

@media screen and (min-width: 1024px){
    .plans{
        padding: 5rem 2% 0;
    }
    .plans__price{
        font-size: 3rem;
    }
    .plans__list{
        margin: 5rem 0;
    }
}

/* FEATURE SECTION */
.feature{
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    justify-items: center;
    gap: 3rem;
    padding: 5rem 4rem 5rem 0;
}

.feature__desc .btn{
    padding: 1.5rem 3rem;
}

.feature__text{
    margin-bottom: 3rem;
    text-align: justify;
}

.feature__img{
    padding-right: 5rem;
}

.feature__img img{
    width: 100%;
    height: auto;
}

@media screen and (min-width: 1024px) {
    .feature {
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: auto;
        gap: 20px;
    }

    .feature__desc {
        order: 1; 
    }

    .feature__img {
        order: 2;
    }
}

/* CHARGE */
.charge.feature{
    padding: 2rem 4rem;
}

.charge .feature__img {
    padding: 0 4rem;
}

@media screen and (min-width: 1024px) {
    .charge.feature{
        padding: 5rem 0;
    }
    .charge .feature__desc {
        order: 2; 
    }

    .charge .feature__img {
        order: 1;
        padding: 0 3.8rem 0 5rem;
    }
  
}
/* CONTACTS US */
.contact-us{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
    margin: 0 0 7rem 0;
}

.contact-us__header,
.contact-us__body{
    width: 100%;
    text-align: center;
    padding: 1rem;
}

.contact-us__header h2{
    font-size: 2.2rem;
    margin-bottom: 1rem;
}
.contact-us__header span{
    font-size: 1.75rem;
}

.contact-us__body{
    display: grid;
    gap: 4rem;
}

.contact-us__address{
    display: grid;
    gap: 4rem;
    justify-content: center;
}

.contact-us__info{
    display: grid;
    gap: 2rem;
}

.contact-us__info div{
    display: flex;
    flex-direction: row-reverse;
    gap: 2rem;
    padding: 0 1rem;
    align-items: center;
}

.contact-us__info__text{
    text-align: left;
    width: 29rem;
}

.contact-us__social{
    display: flex;
    justify-content: center;
    gap: 5rem;
}

.contact-us__map{
    display: none;
}
/* ... */

